overflow scroll fix for left panel and styling

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,6 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+html {
+  background-color: #e5e5e5;
+}
